# tortoise-tts

./: .dockerignore  .gitignore  .gitmodules  Advanced_Usage.md  CHANGELOG.md  CITATION.cff  Copy_of_tortoise_tts.ipynb  Copy_of_tortoise_tts_origCopy.ipynb  Dockerfile  Dockerfile.app  Dockerfile.moderngpu  LICENSE  MANIFEST.in  README.md  VERSIONS.md  Voice_customization_guide.md  api.py  api_new_autoregressive.py  app.py  do_tts.py  enter_nix_development_shell.sh  eval_multiple.py  filepicker.py  flake.nix  get-docker.sh  logging_conf.yml  pyproject.toml  read.py  requirements-docker.txt  requirements.txt  requirements_version.txt  setup.py  sweep.py  test.sh  test.txt  test_sig.npy  tortoise_tts.ipynb  tortoise_tts_origCopy.ipynb  tortoise_v2_examples.html  voice_customization_guide.md  (+1 more)
app/: main.py  model.py  utils.py
app_utils/: conf.py  filepicker.py  funcs.py
data/: mel_norms.pth
models/: arch_util.py  autoregressive.py  classifier.py  clvp.py  cvvp.py  diffusion_decoder.py  discrete_diffusion_vocoder.py  lucidrains_dvae.py  new_autoregressive.py  text_voice_clip.py  vocoder.py  xtransformers.py
results/: .gitattributes  texts.txt
scripts/: app.py  docker-entrypoint.sh  eval.py  get_conditioning_latents.py  inference.py  is_this_from_tortoise.py  recording_tools.py  run_docker.sh  tortoise_tts.py  tts_app-entrypoint.sh
static/: bigvgan_24khz_100band_config.json  bigvgan_base_24khz_100band_config.json
tests/: test_transcribe.py  test_tts_api.py
tortoise/: api.py  api_fast.py  base_argparser.py  do_tts.py  dpm_solver_pytorch.py  eval.py  inference.py  (+11 more)
(+83 files in other folders)
