[tool.poetry]
name = "TorToiSe"
version = "3.0.0"
description = "A high quality multi-voice text-to-speech library"
authors = ["James Betker <james@adamant.ai>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.12"
einops = "^0.6.0"
inflect = "^6.0.2"
progressbar = "^2.5"
tokenizers = "^0.13.2"
tqdm = "^4.64.1"
Unidecode = "^1.3.6"
librosa = "^0.8.1"
scipy = "^1.10.0"
numba = "^0.56.4" # putting this here because of a weird bug
rotary-embedding-torch = "^0.2.1"
transformers = "^4.26.1"
torchaudio = "^0.13.1"
k-diffusion = "^0.0.14"
voicefixer = "^0.1.2"
streamlit = "^1.18.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
ruff = "^0.0.247"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
